<resources>
    <string name="app_name">Travel Planner</string>
    <string name="back_button">Go back</string>
    <string name="share_itinerary">Share Itinerary</string>
    <string name="your_itinerary">Your Itinerary</string>
    <string name="trip_map">Trip Map</string>
    <string name="loading_map">Loading map...</string>
    <string name="add_destination">Add destination</string>
</resources>